Add comment to explain why preprocessing requires passing in the JVM start date/time.